# agenteval

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agenteval/: __init__.py  cli.py  config.py  models.py  runner.py  scenarios.py  templates.py  workspace.py
agenteval/assertions/: __init__.py  base.py  file_checks.py  judge.py  mock_state.py  output_checks.py  registry.py  tool_called.py
agenteval/mocks/: __init__.py  engine.py  handlers.py  manager.py  spec.py
agenteval/providers/: __init__.py  base.py  claude.py  registry.py
agenteval/report/: __init__.py  console.py  json_report.py  junit.py  markdown.py
examples/my-eval/: .env.example  .gitlab-ci.yml  agenteval.yaml
examples/my-eval/.github/workflows/: agenteval.yml
examples/my-eval/agents/release-bot/: CLAUDE.md  capabilities.yaml
examples/my-eval/agents/release-bot/skills/slack/: SKILL.md
examples/my-eval/scenarios/slack-release-note/: rubric.md  scenario.yaml
examples/my-eval/scenarios/slack-release-note/input/: prompt.md
examples/my-eval/scenarios/slack-release-note/mcp/slack/: handler.py  mock.yaml  schema.json
skills/agenteval/: SKILL.md
skills/agenteval/references/: assertions.md  mocks.md  scenario-and-agent.md
