[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval"
version = "0.1.0"
description = "Unit tests for agents. Define an agent with capa's capabilities.yaml, write scenarios and assertions, mock MCP servers, run in CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "agenteval contributors" }]
keywords = ["agent", "evaluation", "mcp", "capa", "llm", "testing", "ci"]

dependencies = [
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "click>=8.1",
    "jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agenteval = "agenteval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenteval*"]

[tool.setuptools.package-data]
agenteval = ["templates/**/*"]
