[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval-framework"
version = "0.1.0"
description = "Unit tests for agents. Define an agent with capa's capabilities.yaml, write scenarios and assertions, mock MCP servers, run in CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Antonio Zaitoun", email = "antonio@zaitoun.dev" }]
keywords = ["agent", "evaluation", "mcp", "capa", "llm", "testing", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "click>=8.1",
    "jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/Minitour/agenteval"
Repository = "https://github.com/Minitour/agenteval"
Issues = "https://github.com/Minitour/agenteval/issues"

[project.scripts]
agenteval = "agenteval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agenteval*"]
